--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>привіт</h1>
+     <header>
+        <a href="">webstudio</a>
+        <ul>
+            <li><a href="">studio</a></li>
+            <li><a href="">portfolio</a></li>
+            <li><a href="">contacts</a></li>
+        </ul>
+        <a href="">info@webstudio.com</a>
+        <a href="tel:">+38 098 111 11 11</a>
+        <nav></nav>
+    </header>
+    <main>
+        <section></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
