--- a/index.html
+++ b/index.html
@@ -4,22 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>webstudio	
+        &#127912;</title>
 </head>
 <body>
      <header>
         <a href="">webstudio</a>
         <ul>
-            <li><a href="">studio</a></li>
-            <li><a href="">portfolio</a></li>
-            <li><a href="">contacts</a></li>
+            <li><a href="">Studio</a></li>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Contacts</a></li>
         </ul>
-        <a href="">info@webstudio.com</a>
-        <a href="tel:">+38 098 111 11 11</a>
-        <nav></nav>
+        <nav>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+38 098 111 11 11">+38 098 111 11 11</a>
+        </nav>
     </header>
     <main>
-        <section></section>
+        <section>
+            <ul>
+               <h1>Effective Solutions
+                for Your Business</h1>
+                </li>
+                <button type="button">Order Service</button>
+            </ul>
+        </section>
+        <section>
+            <ul>
+                <li><h2>Strattegy</h2>
+                    <p>Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution. </p></li>
+                
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    <h4>Diligence</h4>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    <h5>Technologies</h5>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </ul>
+        </section>
     </main>
     <footer></footer>
 </body>
