--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>webstudio	
-        &#127912;</title>
+    <title>webstudio&#127912;</title>
 </head>
 <body>
      <header>
-        <a href="">webstudio</a>
+        <nav><a href="./index.html">webstudio</a>
         <ul>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
             <li><a href="">Contacts</a></li>
         </ul>
-        <nav>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+38 098 111 11 11">+38 098 111 11 11</a>
         </nav>
+        <address>
+            <ul><a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="tel:+38 098 111 11 11">+38 098 111 11 11</a>
+            </ul>
+        </address>
     </header>
     <main>
         <section>
@@ -31,18 +32,34 @@
         </section>
         <section>
             <ul>
-                <li><h2>Strattegy</h2>
+                <li>
+                    <h2>Strategy</h2>
                     <p>Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution. </p></li>
-                
-                    <h3>Punctuality</h3>
+                        problem to walk away with the perfect and creative solution. </p>
+                </li>
+                <li>
+                    <h2>Punctuality</h2>
                     <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                    <h4>Diligence</h4>
+                </li>
+                <li>
+                    <h2>Diligence</h2>
                     <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                    <h5>Technologies</h5>
+                </li>
+                <li>
+                    <h2>Technologies</h2>
                     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>  
+        </section>
+        <section>
+            <ul>
+                <h2>What are we doing</h2>
+                <li><img src="" alt=""></li>
+                <li><img src="" alt=""></li>
+                <li><img src="" alt=""></li>
             </ul>
         </section>
+        <section></section>
     </main>
     <footer></footer>
 </body>
