--- a/index.html
+++ b/index.html
@@ -54,12 +54,28 @@
         <section>
             <ul>
                 <h2>What are we doing</h2>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
+                <li><img src="./images/img-1.jpg" alt="info-1" width="360" height="300"/></li>
+                <li><img src="./images/img-2.jpg" alt="info-2" width="360" height="300"/></li>
+                <li><img src="./images/img-3.jpg" alt="info-3" width="360" height="300"/></li>
             </ul>
         </section>
-        <section></section>
+        <section>
+            <ul>
+                <h2>Our team</h2>
+                <li><img src="./images/img-1.1.jpg" alt="man-1" width="264" height="260"/></li>
+                <h3>Mark Guerrero</h3>
+                <p>Product Designer</p>
+                <li><img src="./images/img-1.2.jpg" alt="man-2" width="264" height="260"/></li>
+                <h3>Tom Ford</h3>             
+                <p>Frontend Developer</p>
+                <li><img src="./images/img-1.3.jpg" alt="woman-1" width="264" height="260"/></li>
+                <h3>Camila Garcia</h3>
+                <p>Marketing</p>
+                <li><img src="./images/img-1.4.jpg" alt="man-3" width="264" height="260"/></li>
+                <h3>Daniel Wilson</h3>
+                <p>UI Designer</p>
+            </ul>       
+         </section>
     </main>
     <footer></footer>
 </body>
