--- a/index.html
+++ b/index.html
@@ -1,82 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>webstudio&#127912;</title>
-</head>
-<body>
-     <header>
-        <nav><a href="./index.html">webstudio</a>
+  </head>
+
+  <body>
+    <header>
+      <nav>
+        <a href="./index.html">webstudio</a>
         <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
-        </nav>
-        <address>
-            <ul><a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+38 098 111 11 11">+38 098 111 11 11</a>
-            </ul>
-        </address>
+      </nav>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380981111111">+38 098 111 11 11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
-        <section>
-            <ul>
-               <h1>Effective Solutions
-                for Your Business</h1>
-                </li>
-                <button type="button">Order Service</button>
-            </ul>
-        </section>
-        <section>
-            <ul>
-                <li>
-                    <h2>Strategy</h2>
-                    <p>Our goal is to identify the business
-                        problem to walk away with the perfect and creative solution. </p>
-                </li>
-                <li>
-                    <h2>Punctuality</h2>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                </li>
-                <li>
-                    <h2>Diligence</h2>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li>
-                    <h2>Technologies</h2>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>
-            </ul>  
-        </section>
-        <section>
-            <ul>
-                <h2>What are we doing</h2>
-                <li><img src="./images/img-1.jpg" alt="info-1" width="360" height="300"/></li>
-                <li><img src="./images/img-2.jpg" alt="info-2" width="360" height="300"/></li>
-                <li><img src="./images/img-3.jpg" alt="info-3" width="360" height="300"/></li>
-            </ul>
-        </section>
-        <section>
-            <ul>
-                <h2>Our team</h2>
-                <li><img src="./images/img-1.1.jpg" alt="man-1" width="264" height="260"/></li>
-                <h3>Mark Guerrero</h3>
-                <p>Product Designer</p>
-                <li><img src="./images/img-1.2.jpg" alt="man-2" width="264" height="260"/></li>
-                <h3>Tom Ford</h3>             
-                <p>Frontend Developer</p>
-                <li><img src="./images/img-1.3.jpg" alt="woman-1" width="264" height="260"/></li>
-                <h3>Camila Garcia</h3>
-                <p>Marketing</p>
-                <li><img src="./images/img-1.4.jpg" alt="man-3" width="264" height="260"/></li>
-                <h3>Daniel Wilson</h3>
-                <p>UI Designer</p>
-            </ul>       
-         </section>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h2>Strategy</h2>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h2>Punctuality</h2>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h2>Diligence</h2>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h2>Technologies</h2>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/img-1.jpg"
+              alt="info-1"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img-2.jpg"
+              alt="info-2"
+              width="360"
+              height="300"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/img-3.jpg"
+              alt="info-3"
+              width="360"
+              height="300"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our team</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/img-1.1.jpg"
+              alt="man-1"
+              width="264"
+              height="260"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-1.2.jpg"
+              alt="man-2"
+              width="264"
+              height="260"
+            />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-1.3.jpg"
+              alt="woman-1"
+              width="264"
+              height="260"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/img-1.4.jpg"
+              alt="man-3"
+              width="264"
+              height="260"
+            />
+            <h3>Daniel Wilson</h3>
+          <p>UI Designer</p>
+          </li>
+          
+        </ul>
+      </section>
     </main>
-    <footer></footer>
-</body>
+    <footer>
+      <a href="./index.html">webstudio</a>
+      <p>
+        Increase the flow of customers and <br />
+        for your business with digital <br />
+        marketing & growth solutions.
+      </p>
+    </footer>
+  </body>
 </html>
