--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11(000)1111111</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
       <section>
-        <h2>Effective Solutions for Your Business</h2>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2 style="display: none">Features</h2>
+        <h2>Features</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -95,13 +95,12 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <a href=""
-              ><img
-                src="./images/img-1.1.jpg"
-                alt="man-1"
-                width="264"
-                height="260"
-            /></a>
+            <img
+              src="./images/img-1.1.jpg"
+              alt="man-1"
+              width="264"
+              height="260"
+            />
 
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
@@ -149,7 +148,7 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and for your business with digital
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
