--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <ul>
           <li>
             <img
-              src="./images/img-1.1.jpg"
+              src="./images/img-1_1.jpg"
               alt="man-1"
               width="264"
               height="260"
@@ -108,7 +108,7 @@
           <li>
             <a href="">
               <img
-                src="./images/img-1.2.jpg"
+                src="./images/img-1_2.jpg"
                 alt="man-2"
                 width="264"
                 height="260"
@@ -120,7 +120,7 @@
           <li>
             <a href=""
               ><img
-                src="./images/img-1.3.jpg"
+                src="./images/img-1_3.jpg"
                 alt="woman-1"
                 width="264"
                 height="260"
@@ -129,11 +129,10 @@
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-
           <li>
             <a href="">
               <img
-                src="./images/img-1.4.jpg"
+                src="./images/img-1_4.jpg"
                 alt="man-3"
                 width="264"
                 height="260"
